--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/users_database?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url = jdbc:mysql://localhost:3306/users_database?autoReconnect=true&useSSL=false
 
+spring.datasource.username = root
+spring.datasource.password = root123@
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
